force-app/main/default/objects/Milestone_Invoice__c/Milestone_Invoice__c.object-meta.xml
<CustomObject>
    <label>Milestone Invoice</label>
    <nameField>
        <label>Milestone Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>