force-app/main/default/objects/Milestone_Invoice__c/fields/Is_Handover__c.field-meta.xml
<CustomField>
    <fullName>Is_Handover__c</fullName>
    <formula>Cash_Flow__r.Handover_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Handover</label>
    <type>Checkbox</type>
</CustomField>